# Simple_Log_Analysis_System

./: .gitignore  .travis.yml  LICENSE  Readme.md  Vagrantfile
agent/: .gitignore  Makefile.am  configure.ac  translate_btpl.rule
agent/apache_helper_src/: .gitignore  Makefile.am  main.cpp
agent/apache_helper_src/logger/: configure.cpp  configure.h
agent/apache_helper_src/program_options/: options.cpp  options.h  parse_options.cpp  parse_options.h
agent/bash/: bash-4.3-mod.patch
agent/bash/bash-4.3/: Makefile.in  autogen.sh  bash_slas.conf  configure.ac  eval.c  send_command.cpp  send_command.h  slas_options.hpp  slas_parser.cpp  slas_parser.hpp
agent/configs/: .gitignore  Makefile.am  agent.config.btpl
agent/m4/: ax_boost_log.m4
agent/scripts/init/: .gitignore  Makefile.am  patlms-agent.btpl  slas-agent.btpl
agent/src/: Makefile.am  main.cpp
agent/src/apache/: apache_log_receiver.cpp  apache_log_receiver.h
agent/src/apache/detail/: apache_dbus_thread_command.cpp  apache_dbus_thread_command.h  apache_proxy.cpp  apache_proxy.h
agent/src/bash/: bash_log_receiver.cpp  bash_log_receiver.h  receive_messages.cpp  receive_messages.h
agent/src/bash/detail/: bash_dbus_thread_command.cpp  bash_dbus_thread_command.h  bash_log_receiver_interface.h  bash_proxy.cpp  bash_proxy.h  system.cpp  system.h  system_interface.cpp  system_interface.h
agent/src/bash/exception/: bash_exception.h
agent/src/dbus/: bus.cpp  bus.h  dbus_error_guard.h  dbus_thread.cpp  dbus_thread.h  dbus_thread_command.cpp  dbus_thread_command.h  object.cpp  proxy_object.h
agent/src/dbus/detail/: dbus_thread_interface.cpp  dbus_thread_interface.h  system.cpp  system.h  system_interface.h
agent/src/objects/: bash_proxy.cpp  bash_proxy.h
agent/src/program_options/: options.cpp  options.h  parser.cpp  parser.h
agent/tests/: Makefile.am  main.cpp
agent/tests/bash/: bash_log_receiver_test.cpp
agent/tests/dbus/: dbus_thread_test.cpp
agent/tests/mock/dbus/: bus.h  dbus_thread.h
examples/: Readme.md
libpatlms/: .gitignore  autogen.sh  configure.ac
libpatlms/include/patlms/dbus/: bus.h  object.h  proxy_object.h
libpatlms/include/patlms/network/: connection_data.h  network.h  network_message.h  wait_status.h
libpatlms/include/patlms/type/: apache_log_entry.h  bash_log_entry.h  date.h  day.h  time.h  timestamp.h
libpatlms/include/patlms/util/: configure_logger.h  create_pidfile.h  demonize.h  distance.h  path.h  pidfile.h  remove_file.h  run_partially.h
libpatlms/src/: Makefile.am
libpatlms/src/dbus/: bus.cpp  bus.h  object.cpp  object.h  proxy_object.cpp
libpatlms/src/dbus/detail/: bus_interface.cpp  dbus.cpp  dbus_error_guard.cpp  dbus_wrapper.cpp
libpatlms/src/network/: network.cpp
libpatlms/src/network/detail/: network_interface.cpp  system.cpp  system_interface.cpp
libpatlms/src/type/: date.cpp  time.cpp  timestamp.cpp
libpatlms/src/util/: configure_logger.cpp  create_pidfile.cpp  demonize.cpp  distance.cpp  path.cpp  pidfile.cpp  remove_file.cpp  run_partially.cpp
libpatlms/src/util/detail/: system.cpp
libpatlms/tests/: Makefile.am
libpatlms/tests/dbus/detail/: dbus_wrapper.cpp
libpatlms/tests/network/: network.cpp
libpatlms/tests/type/: date.cpp  time.cpp
libpatlms/tests/util/: create_pidfile.cpp  distance.cpp  path.cpp  pidfile.cpp  remove_file.cpp  run_partially.cpp
libslas/src/: Makefile.am
libslas/src/dbus/: bus.cpp  object.cpp  proxy_object.cpp
libslas/src/dbus/detail/: bus_interface.cpp  dbus.cpp  dbus_error_guard.cpp  dbus_wrapper.cpp
libslas/src/network/: network.cpp
libslas/src/network/detail/: network_interface.cpp  system.cpp  system_interface.cpp
libslas/src/type/: date.cpp  time.cpp  timestamp.cpp
libslas/src/util/: configure_logger.cpp  create_pidfile.cpp  demonize.cpp  distance.cpp  path.cpp  remove_file.cpp  run_partially.cpp
libslas/src/util/detail/: system.cpp
server/: .gitignore  Makefile.am  autogen.sh  configure.ac  translate_btpl.rule
server/configs/: .gitignore  Makefile.am  dbus.conf.template  dbus.config.template.btpl  server.config.btpl
server/scripts/: .gitignore  Makefile.am  run_dbus.btpl
server/scripts/init/: .gitignore  Makefile.am  patdbus.btpl  patlms-dbus.btpl  patlms-server.btpl  patlms.btpl  slas-dbus.btpl  slas-server.btpl
server/src/: Makefile.am  main.cpp
server/src/analyzer/: analyzer.cpp  analyzer.h  analyzer_object_interface.h  apache_session_entry.h
server/src/analyzer/detail/: analyzer_interface.h
server/src/apache/analyzer/: apache_analyzer_object.cpp  apache_analyzer_object.h
server/src/apache/database/: anomaly_detection_configuration_entry.h  database_functions.cpp  database_functions.h
server/src/apache/type/: anomaly_detection_configuration_entry.h  apache_session_entry.h  last_run_type.h
server/src/apache/web/: command_executor_object.cpp  command_executor_object.h
server/src/bash/analyzer/: bash_analyzer_object.cpp  bash_analyzer_object.h
server/src/bash/database/: database_functions.cpp  database_functions.h
server/src/database/: database.cpp  database.h  general_database_functions.cpp  general_database_functions.h  sqlite.cpp  sqlite.h  sqlite_wrapper.cpp  sqlite_wrapper.h  types.h
server/src/dbus/: bus.cpp
server/src/interface/: sqlite.h
server/src/mailer/: mail.cpp  mail.h  mailer.cpp  mailer.h
server/src/notifier/: notifier.cpp  notifier.h
server/src/objects/: apache.cpp  apache.h  bash.cpp  bash.h
server/src/program_options/: options.cpp  options.h  parser.cpp  parser.h  program_options_command_executor_object.cpp  program_options_command_executor_object.h
server/src/type/: all.h  bash_log_entry.h  time.cpp  time.h  typedefs.h
server/src/web/: command_executor.cpp  command_executor.h  command_receiver.cpp  command_receiver.h
server/tests/: Makefile.am  main.cpp
server/tests/analyzer/: analyzer.cpp
server/tests/database/: database.cpp  general_database_functions.cpp  sqlite_wrapper.cpp
server/tests/program_options/: program_options_command_executor_object.cpp
server/tests/web/: command_executor.cpp  command_receiver.cpp
(+365 files in other folders)
